@@ -2,7 +2,7 @@
 % htlatex tex4ht-jsml-xtpipes "xhtml,next,3" "" "-d./"
 %
 % Copyright (C) 2009, 2010 TeX Users Group.
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2002--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -33,8 +33,9 @@
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
 <!-- jsml.4xt (`version), generated from `jobname.tex
      Copyright (C) 2009, 2010 TeX Users Group
-     Copyright (C) `CopyYear.2006. Eitan M. Gurari
-`<TeX4ht copyright`> --><xtpipes signature="jsml.4xt (`version)">
+     Copyright (C) `CopyYear.2002. Eitan M. Gurari
+`<TeX4ht copyright`> -->
+<xtpipes signature="jsml.4xt (`version)">
    <sax content-handler="xtpipes.util.ScriptsManager, tex4ht.GroupMn, tex4ht.JsmlFilter" 
         lexical-handler="xtpipes.util.ScriptsManagerLH" >
      `<numbers in math`>
